tests/error/defining_local_unresolved_struct_in_subscope.c
// fail "Undeclared struct."

int main(){
    
    struct asd *asd;
    {
        struct asd{int a;};
        asd->a;
    }
    
    return 0;
}



